
[[TBD]]
== TBD

icon:check[] Config: It is now possible to configure the image cache directory path using the `MESH_IMAGE_CACHE_DIRECTORY` environment variable. Fixes link:https://github.com/gentics/mesh/issues/1067[#1067]

icon:check[] Consistency Checks: An empty binary will no longer be considered inconsistent.

[[v1.5.1]]
== 1.5.1 (11.05.2020)

icon:check[] Java Rest Client: `MeshRequest#toCompletable()` now throws an exception again when receiving an error from the server.

[[v1.5.0]]
== 1.5.0 (08.05.2020)

icon:plus[] Test: An enhanced test container class has been added. The `MeshContainer` class replaces the `MeshDockerServer` which was deprecated.

icon:plus[] Elasticsearch: It is now possible to define Elasticsearch settings / mappings per language. This helps using language specific stemmers or stop word lists. Please refer to the link:{{< relref "elasticsearch.asciidoc" >}}#language-override[documentation] for more information.

icon:check[] Core: Fixed a bug that caused an internal server error if a project was attempted to be created after any role with permissions to create projects was deleted.

icon:check[] Java Rest Client: The response body is now properly closed when calling `blockingAwait()` on a request.

icon:check[] GraphQL: Errors during GraphQL queries are now correctly propagated to the client.

icon:plus[] Plugins: The plugin registration process was changed. Plugins will now no longer be directly registered when deployed. Instead the plugins will remain in a pre-registration status until Gentics Mesh is able to deploy them. This is especially useful when running plugins in clustered mode. Plugins will only be registered when the write quorum has been reached. Additionally the plugin deployment process will now utilize a lock in clustered mode to prevent concurrent deployments of plugins. The plugin status was added to the plugin endpoint response.
