@@ -153,6 +153,7 @@ node_error_upload_failed=The upload failed. Please inspect logs for details.
 node_error_missing_required_field_value=Could not find required value within rest request for field with key "{0}" of schema "{1}". The value was not yet set for the node.
 node_error_required_field_not_deletable=The required field "{0}" of schema "{1}" can't be deleted.
 node_error_invalid_microschema_field_value=The value for field "{0}" must not use microschema "{1}".
+node_error_invalid_schema_field_value=The value for field "{0}" must not use schema "{1}".
 node_list_item_not_found=Node within node list with uuid {0} could not be found.
 node_update_failed=Update of node "{0}" failed.
 node_error_invalid_string_field_value=The string field "{0}" must not be set to value "{1}".
